# amadeus

./: .env.example  Cargo.toml  README.md
src/: api_client.rs  main.rs  model.rs
